# RustBerry-PoE-Monitor

./: Cargo.toml  README.md  config.toml  install.sh
.github/workflows/: build.yaml
data/: pcsenior.raw
src/: config.rs  display.rs  display_types.rs  fan_controller.rs  main.rs
