[package]
name = "rustberry-poe-monitor"
version = "1.1.0"
edition = "2021"
authors = ["jackra1n"]
description = "A simple PoE Monitor for Raspberry Pi Waveshare PoE HAT (B)"
repository = "https://github.com/jackra1n/RustBerry-PoE-Monitor"
readme = "README.md"
license = "GPL-3.0"

[[bin]]
name = "rustberry-poe-monitor"

[dependencies]
sysinfo = "0.34.2"
ssd1306 = "0.10"
embedded-graphics = "0.8.1"
linux-embedded-hal = "0.4"
profont = "0.7.0"
display-interface = "0.5.0"
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.11.3"
pcf857x = "0.5.0"
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] }
